# code-challenges

./: .gitignore  CONTRIBUTING.md  README.md
.github/: TEMPLATE_ACTION_WORKFLOW.yaml  copilot-instructions.md
.github/workflows/: cpp_binary_search_tree_ci.yaml  cpp_prime_checker_ci.yaml  cpp_smart_array_ci.yaml  cpp_string_reverser_ci.yaml  cpp_test_challenge_ci.yaml  cpp_vector_math_ci.yaml  python_csv_data_parser_ci.yaml  python_factorial_calculator_ci.yaml  python_inventory_system_ci.yaml  python_palindrome_checker_ci.yaml  python_simple_bank_account_ci.yaml  python_test_challenge_ci.yaml  test_challenge_ci.yaml
cpp/: CMakeLists.txt
cpp/binary_search_tree/: CMakeLists.txt  README.md  solution.cpp  test.cpp
cpp/binary_search_tree/include/: solution.h
cpp/prime_checker/: CMakeLists.txt  README.md  solution.cpp  test.cpp
cpp/prime_checker/include/: solution.h
cpp/smart_array/: CMakeLists.txt  README.md  solution.cpp  test.cpp
cpp/string_reverser/: CMakeLists.txt  README.md  solution.cpp  test.cpp
cpp/test_challenge/: CMakeLists.txt  README.md  solution.cpp  solution.h  test.cpp
cpp/test_challenge/include/: solution.h
cpp/vector_math/: CMakeLists.txt  README.md  solution.cpp  test.cpp
cpp/vector_math/include/: solution.h
python/csv_data_parser/: README.md  solution.py  test_main.py
python/factorial_calculator/: README.md  solution.py  test_main.py
python/inventory_system/: README.md  solution.py  test_main.py
python/palindrome_checker/: README.md  solution.py  test_main.py
python/simple_bank_account/: README.md  solution.py  test_main.py
python/test_challenge/: README.md  solution.py  test_main.py
(+2 files in other folders)
